name:                 rocker
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com 
category:             Sound
build-type:           Simple
cabal-version:        >= 1.10

executable rocker
  main-is:              Main.hs
  other-modules:
    Drums
    ProGuitar
  build-depends:
    base >= 4.7 && < 4.8
    , hmidi
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded -O2
